--- a/quiz/vars2.html
+++ b/quiz/vars2.html
@@ -2,11 +2,13 @@
     <head>
         <script>
             // change the script such that i=0,1,2,3,4 is logged in the console
-            for (var i = 0; i < 5; i++) {
+            for (let i = 0; i < 5; i++) {
                 // setTimeout executes the function after 5 ms
                 setTimeout(function() {
                     console.log(i);
                 }, 5);
+                // let is preventing js to make global edits
+                // so if it's var, function will only execute after the loop
             }
         </script>
     </head>
