--- a/quiz/arrow.html
+++ b/quiz/arrow.html
@@ -10,6 +10,7 @@
         <p id="demo"> DEMO </p>
     </div>
     <script>
+        // window.msg = 'Hey World';
         const obj = {
             msg: 'Hello World',
             hello:  function() {
@@ -17,9 +18,11 @@
             }
         };
         window.addEventListener('load', function() {
+            alert(this)
             obj.hello();
         });
         document.getElementById('btn').addEventListener('click', function() {
+            alert(this);
             obj.hello();
         });
     </script>
